--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -175,7 +175,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.FS_GITHUB_TOKEN }}
       with:
           tag_name: ${{ steps.split-flutter.outputs._0 }}+${{ steps.split-flutter.outputs._0 == steps.split.outputs._0 && env.GITHUB_RUN_NUMBER_WITH_OFFSET || 1 }}
-          release_name: Release ${{ steps.split-flutter.outputs._0 }}+${{ steps.split-flutter.outputs.outputs._0 == steps.split.outputs._0 && env.GITHUB_RUN_NUMBER_WITH_OFFSET || 1 }}
+          release_name: Release ${{ steps.split-flutter.outputs._0 }}+${{ steps.split-flutter.outputs._0 == steps.split.outputs._0 && env.GITHUB_RUN_NUMBER_WITH_OFFSET || 1 }}
           body: |
             Changes in this Release
             - First Change
