--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -100,17 +100,14 @@ jobs:
         clean: 'true'
         fetch-depth: 0
       
-    - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v0.9.7
-      with:
-        versionSpec: '5.x'
+#     - name: Install GitVersion
+#       uses: gittools/actions/gitversion/setup@v0.9.7
+#       with:
+#         versionSpec: '5.x'
         
-    - name: Determine Version
-      id: gitversion
-      uses: gittools/actions/gitversion/execute@v0.9.7
-#      with:
-#        useConfigFile: true
-#        configFilePath: ./.github/gitversion.yml
+#     - name: Determine Version
+#       id: gitversion
+#       uses: gittools/actions/gitversion/execute@v0.9.7
 
 
     - uses: actions/checkout@v3
@@ -130,14 +127,14 @@ jobs:
         separator: +
         limit: -1
 
-    - name: GitHub Tag Name example
-      id: test
+#     - name: GitHub Tag Name example
+#       id: test
       
-      run: |
-        echo "Tag name from GITHUB_REF_NAME: $GITHUB_HEAD_REF"
-        echo "Tag name from github.ref_name: ${{  steps.previoustag.outputs.tag }}"
-        echo "Tag name from github.ref_name: ${{  steps.split.outputs._0 }}"
-        echo "Tag name from github.ref_name: ${{  steps.test.GIT_TAG }}"
+#       run: |
+#         echo "Tag name from GITHUB_REF_NAME: $GITHUB_HEAD_REF"
+#         echo "Tag name from github.ref_name: ${{  steps.previoustag.outputs.tag }}"
+#         echo "Tag name from github.ref_name: ${{  steps.split.outputs._0 }}"
+#         echo "Tag name from github.ref_name: ${{  steps.test.GIT_TAG }}"
     
     
    
