--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -90,9 +90,16 @@ jobs:
   release:
     name: iOS CI/CD
 #     needs: code-analysis-and-testing
+    environment: Dev
+    env:
+        TEST_VAL: ${{ secrets.TEST_QWER }}
     runs-on: macos-latest
     timeout-minutes: 30
     steps:  
+    
+    - name: Test Secrets
+      run: |
+        echo ${{evn.TEST_VAL}}
 
     - name: Checkout repository
       uses: actions/checkout@v3
