--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -88,7 +88,7 @@ jobs:
 
 
   release:
-    environment: Dev
+    environment: qwerty
     env:
         TEST_VAL: ${{ secrets.TEST_QWER }}
     name: iOS CI/CD
