--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -15,7 +15,11 @@ env:
   PATH_TO_IPA: 'build/ios/ipa/untitled1.ipa'
 
 jobs:
-  code-analysis-and-testing:
+ build:
+    environment: qwerty
+    env:
+       TEST_VAL: ${{ secrets.TEST_QWER }}
+ code-analysis-and-testing:
     name: Code analysis and testing
     runs-on: ubuntu-latest
     timeout-minutes: 30
@@ -39,7 +43,7 @@ jobs:
       run: flutter test
 
 
-  android:
+ android:
     name: Android CI/CD
     needs: code-analysis-and-testing
     runs-on: ubuntu-latest
@@ -87,12 +91,10 @@ jobs:
         fastlane supply --aab ${{ env.PATH_TO_AAB }} --json_key_data '${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON }}' --package_name '${{ env.ANDROID_PACKAGE_NAME }}' --track 'internal'
 
 
-  release:
+ release:
     name: iOS CI/CD
 #     needs: code-analysis-and-testing
-    environment: qwerty
-    env:
-        TEST_VAL: ${{ secrets.TEST_QWER }}
+    
     runs-on: macos-latest
     timeout-minutes: 30
     steps:  
